# expensa-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  main.py  pyproject.toml
.migrations/: env.py
.migrations/versions/: 679164fc710f_add_is_enabled_to_category.py  9563221113a3_initial.py  b013bdd02aa0_initial.py
app/: initialize.py
app/config/: config_reader.py
app/models/: models.py
app/routes/: auth_route.py  category_route.py  expense_route.py  user_route.py
app/schema/: category_schema.py  expense_schema.py  user_schema.py
app/utils/: auth.py  database.py  immutable.py  token.py
app/utils/mapper/: category_mapper.py  expense_mapper.py  user_mapper.py
app/utils/query/: category_query.py  expense_query.py  user_query.py
configuration/: database_engine.py  immutable.py  logger.py
dto/: auth.py  user.py
lib/: database.py  password.py
lib/auth/: authenticate.py  token.py
migrations/: env.py
migrations/versions/: 13bb03befd03_initial.py  888c236c0836_initial.py
models/: base.py  models.py  user.py
query/: user_query.py
routes/: auth.py  user.py
settings/: settings_reader.py
src/: main.py
src/settings/: settings_reader.py  settings_utils.py
