[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "alembic>=1.9.0",
    "setuptools>=65.6.3",
    "isort>=5.11.3",
    "wemake-python-styleguide>=0.17.0",
    "mypy>=0.991",
    "black>=22.12.0",
    "pre-commit>=2.20.0",
]

[project]
name = "expensa-backend"
version = "0.1.0"
description = "backend for expensa app"
authors = [{ name = "Yest Izit", email = "hi@dmitry.email" }]
dependencies = [
    "fastapi-users[sqlalchemy]>=10.2.1",
    "fastapi>=0.88.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=1.10.2",
    "asyncpg>=0.27.0",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.mypy]
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unreachable = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
